# cosmology-library

./: CMakeLists.txt  LICENSE  README.md
Draft/: extraction.aux  extraction.bbl  extraction.blg  extraction.out  extraction.tex  refs.bib
apps/: CMakeLists.txt  perturbations.cpp
draft/: extraction.aux  extraction.bbl  extraction.blg  extraction.out  extraction.tex  refs.bib
include/: odesolver.h  parameters.h  perturbations.h  utility.h
include/cosmology/: monte_carlo.h  odesolver.h  parameters.h  perturbations.h
include/cosmology/odesolver/: odeparser.h  odesolver.h  odesystem.h  odewalker.h  parser.h
include/cosmology/utility/: graph.h  math.h  spline.h  utility.h
scripts/: draw_homogeneous.py  draw_homogenous.py  draw_spectrum.py  parse_cmb.py
src/: CMakeLists.txt  perturbations.cpp
src/utility/: spline.cpp
tests/: CMakeLists.txt  math.cpp  odesolver.cpp  perturbations.cpp  spline.cpp
